--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 
 .home {
   text-align: center;
+  padding: 0 40px;
 }
 
 .button-container {
@@ -21,6 +22,7 @@ code {
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  flex-wrap: wrap;
 }
 
 .button {
@@ -32,11 +34,11 @@ code {
 }
 
 .button img {
-  width: 25vw; /* 1/4 the width of the page */
-  height: 25vw; /* 1/4 the height of the page */
+  width: 200px;
+  height: 200px;
   object-fit: cover;
-  min-width: 50px; /* Minimum width */
-  min-height: 50px; /* Minimum height */
+  min-width: 50px;
+  min-height: 50px;
 }
 
 .button span {
